--- a/projects/project 1/project1.html
+++ b/projects/project 1/project1.html
@@ -13,8 +13,8 @@
         <h1>Here & Now</h1>
         <h2>רצינו להזמין אתכם להנות משלל מתנות</h2>
         <p>לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית סחטיר בלובק. תצטנפל בלינדו למרקל אס לכימפו, דול, צוט ומעיוט לפתיעם ברשג. </p>
-        <form class="field">
-            <div class="container">
+        <form class="container">
+            <div>
                 <label>שם</label>
                 <input type="text" name="שם"  placeholder="ישראל ישראלי">
             </div>
@@ -22,7 +22,9 @@
                 <label>דוא"ל</label>
                 <input type="email" name="דואר אלקטרוני"  placeholder="example@example.com">
             </div>
-            <button>עדכנו אותי</button>
+            <div>
+                <button>עדכנו אותי</button>
+            </div>
         </form>
     </body>
 
