--- a/Portfolio - Maya Shteinberg/projects/project 1/project1.html
+++ b/Portfolio - Maya Shteinberg/projects/project 1/project1.html
@@ -14,7 +14,7 @@
         <h2>רצינו להזמין אתכם להנות משלל מתנות</h2>
         <p>לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית לפרומי בלוף קינץ תתיח לרעח. לת צשחמי צש בליא, מנסוטו צמלח לביקו ננבי, צמוקו בלוקריה.</p>
         <form class="container">
-            <div>
+            <div class="myDiv">
                 <label>שם</label>
                 <input type="text" name="שם">
             </div>
