--- a/Portfolio - Maya Shteinberg/projects/project-pages/project-page 1/project_page_4.html
+++ b/Portfolio - Maya Shteinberg/projects/project-pages/project-page 1/project_page_4.html
@@ -19,13 +19,13 @@
                     <a class="nav-link" href="/projects/main page/index.html">ראשי</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#about">אודות</a>
+                    <a class="nav-link" href="/projects/main page/index.html#about">אודות</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#gallery">גלריה</a>
+                    <a class="nav-link" href="/projects/main page/index.html#gallery">גלריה</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#contact">צור קשר</a>
+                    <a class="nav-link" href="/projects/main page/index.html#contact">צור קשר</a>
                 </li>
             </ul>
         </div>
