--- a/Portfolio - Maya Shteinberg/projects/project-pages/project-page 4/project_page_4.html
+++ b/Portfolio - Maya Shteinberg/projects/project-pages/project-page 4/project_page_4.html
@@ -13,25 +13,29 @@
 
 <body>
     <nav class="navbar navbar-expand-sm bg-light navbar-light">
-        <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar" style="margin: 12px;">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/projects/main page/index.html">ראשי</a>
+                    <a class="nav-link" href="/Portfolio - Maya Shteinberg/main page/index.html">ראשי</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#about">אודות</a>
+                    <a class="nav-link" href="/Portfolio - Maya Shteinberg/main page/index.html#about">אודות</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#gallery">גלריה</a>
+                    <a class="nav-link" href="/Portfolio - Maya Shteinberg/main page/index.html#gallery">גלריה</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#contact">צור קשר</a>
+                    <a class="nav-link" href="/Portfolio - Maya Shteinberg/main page/index.html#contact">צור קשר</a>
                 </li>
             </ul>
         </div>
 
         <div class="container-fluid" style="flex-flow: row-reverse;">
-            <a class="navbar-brand logo" href="#">
+            <a class="navbar-brand logo" href="/Portfolio - Maya Shteinberg/main page/index.html">
                 <span>Maya Shteinberg</span>
                 <img src="assets/myAvatar.png" class="myIcon">
             </a>
@@ -39,10 +43,10 @@
     </nav>
 
     <section class="mt-4 p-5 main">
-        <h1>דף נחיתה - לגלות את העולם</h1>
-        <p>פרוייקט דף נחיתה הנבנה באמצעות שימוש ב HTML וב CSS, נבנה על ידי שימוש ברשת (Grid). </p>
-        <a class="btn btn-info" href="project1.zip" download="project.zip">לצפייה בפרוייקט</a>
-        <a class="btn btn-info" href="project1.zip" download="project.zip">להורדת הפרוייקט</a>
+        <h1>לגלות את העולם</h1>
+        <p>פרוייקט דף נחיתה הנבנה באמצעות שימוש ב HTML וב CSS, נבנה באמצעות שימוש ברשת (Grid). </p>
+        <a class="btn btn-info" href="/Portfolio - Maya Shteinberg/projects/project 4/index.html">לצפייה בפרוייקט</a>
+        <a class="btn btn-info" href="/Portfolio - Maya Shteinberg/projects/project 4/assets/index project 4.zip" download="project.zip">להורדת הפרוייקט</a>
     </section>
 
     <section class="icons">
