--- a/Portfolio - Maya Shteinberg/main page/index.html
+++ b/Portfolio - Maya Shteinberg/main page/index.html
@@ -71,21 +71,23 @@
       <div class="row">
           <div class="col-sm-4">
               <div class="card">
-                  <img class="card-img-top" src="../projects/project-pages/project-page 1/project1.jpg" alt="here & now">
+                  <img class="card-img-top" src="../projects/project-pages/project-page 1/assets/project1.jpg" alt="here & now">
                   <div class="card-body">
                       <h4 class="card-title">כאן ועכשיו</h4>
                       <p class="card-text"> דף נחיתה, נבנה באמצעות HTML ו- CSS. </p>
                       <br>
-                      <a href="../projects/project 1/project1.html" class="btn btn-info">לעמוד הפרוייקט >> </a>
+                      <br>
+                      <a href="/Portfolio - Maya Shteinberg/projects/project 1/project1.html" class="btn btn-info">לעמוד הפרוייקט >> </a>
                   </div>
               </div>
           </div>
           <div class="col-sm-4">
               <div class="card">
-                  <img class="card-img-top" src="../projects/project-pages/project-page 2/project_2.jpg" alt="Card image">
+                  <img class="card-img-top" src="../projects/project-pages/project-page 2/assets/project_2.jpg" alt="Card image">
                   <div class="card-body">
                       <h4 class="card-title">תן לנו להוביל אותך קדימה</h4>
                       <p class="card-text">דף נחיתה אשר נבנה באמצעות HTML ו- CSS.</p>
+                      <br>
                       <br>
                       <a href="#" class="btn btn-info">לעמוד הפרוייקט >> </a>
                   </div>
@@ -93,7 +95,7 @@
           </div>
           <div class="col-sm-4">
               <div class="card">
-                  <img class="card-img-top" src="../projects/project-pages/project-page 3/project3.jpg" alt="Card image">
+                  <img class="card-img-top" src="../projects/project-pages/project-page 3/assets/project3.jpg" alt="Card image">
                   <div class="card-body">
                       <h4 class="card-title">קפה טוב לבוקר טוב</h4>
                       <p class="card-text">דף נחיתה אשר נבנה באמצעות HTML ו- CSS.</p>
@@ -108,7 +110,7 @@
                   <img class="card-img-top" src="../projects/project-pages/project-page 4/assets/project4.jpg" alt="Card image">
                   <div class="card-body">
                       <h4 class="card-title">לגלות את העולם</h4>
-                      <p class="card-text">פרוייקט דף נחיתה הנבנה באמצעות שימוש ב HTML וב CSS, נבנה באמצעות שימוש ברשת (Grid).</p>
+                      <p class="card-text">פרוייקט דף נחיתה הנבנה באמצעות שימוש ב HTML וב SCSS, נבנה באמצעות שימוש ברשת (Grid).</p>
                       
                       <a href="#" class="btn btn-info">לעמוד הפרוייקט >> </a>
                   </div>
