--- a/Portfolio - Maya Shteinberg/projects/project-pages/project-page 2/index.html
+++ b/Portfolio - Maya Shteinberg/projects/project-pages/project-page 2/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.rtl.min.css">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Project Page 4</title>
+    <title>Project Page 2</title>
 </head>
 
 <body>
@@ -45,8 +45,8 @@
     <section class="mt-4 p-5 main">
         <h1>לגלות את העולם</h1>
         <p>פרוייקט דף נחיתה הנבנה באמצעות שימוש ב HTML וב CSS, נבנה באמצעות שימוש ברשת (Grid). </p>
-        <a class="btn btn-info" href="/Portfolio - Maya Shteinberg/projects/project 4/index.html">לצפייה בפרוייקט >></a>
-        <a class="btn btn-info" href="/Portfolio - Maya Shteinberg/projects/project 4/assets/index project 4.zip" download="project.zip">להורדת הפרוייקט >></a>
+        <a class="btn btn-info" href="/Portfolio - Maya Shteinberg/projects/project 2/project2.html">לצפייה בפרוייקט >></a>
+        <a class="btn btn-info" href="/Portfolio - Maya Shteinberg/projects/project 2/assets/project2.zip" download="project.zip">להורדת הפרוייקט >></a>
     </section>
 
     <section class="icons">
@@ -57,7 +57,7 @@
     </section>    
 
     <section class="containImage">
-        <img src="assets/project4.jpg" class="styleImage" alt="פרוייקט 4">
+        <img src="../project-page 2/assets/project_2.jpg" class="styleImage" alt="פרוייקט 2">
     </section>
     <footer>
        2023 כל הזכויות שמורות למאיה שטיינברג
