--- a/Portfolio - Maya Shteinberg/projects/project-pages/project-page 1/project_page_4.html
+++ b/Portfolio - Maya Shteinberg/projects/project-pages/project-page 1/project_page_4.html
@@ -8,41 +8,45 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.rtl.min.css">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Project Page 4</title>
+    <title>Project Page 3</title>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-sm bg-light navbar-light">
-        <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar" style="margin: 12px;">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/projects/main page/index.html">ראשי</a>
+                    <a class="nav-link" href="/Portfolio - Maya Shteinberg/main page/index.html">ראשי</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/projects/main page/index.html#about">אודות</a>
+                    <a class="nav-link" href="/Portfolio - Maya Shteinberg/main page/index.html#about">אודות</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/projects/main page/index.html#gallery">גלריה</a>
+                    <a class="nav-link" href="/Portfolio - Maya Shteinberg/main page/index.html#gallery">גלריה</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/projects/main page/index.html#contact">צור קשר</a>
+                    <a class="nav-link" href="/Portfolio - Maya Shteinberg/main page/index.html#contact">צור קשר</a>
                 </li>
             </ul>
         </div>
 
         <div class="container-fluid" style="flex-flow: row-reverse;">
-            <a class="navbar-brand logo" href="#">
+            <a class="navbar-brand logo" href="/Portfolio - Maya Shteinberg/main page/index.html">
                 <span>Maya Shteinberg</span>
-                <img src="project4.jpg" class="icon">
+                <img src="assets/myAvatar.png" class="myIcon">
             </a>
         </div>
     </nav>
 
     <section class="mt-4 p-5 main">
-        <h1>פרוייקט שלי</h1>
-        <p>לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית סחטיר בלובק. תצטנפל בלינדו למרקל אס לכימפו, דול, צוט ומעיוט לפתיעם ברשג. </p>
-        <a class="btn btn-info" href="project1.zip" download="project.zip">קישור לפרוייקט</a>
-        <a class="btn btn-info" href="project1.zip" download="project.zip">הורדת קבצי הפרוייקט</a>
+        <h1>לגלות את העולם</h1>
+        <p>פרוייקט דף נחיתה הנבנה באמצעות שימוש ב HTML וב CSS, נבנה באמצעות שימוש ברשת (Grid). </p>
+        <a class="btn btn-info" href="/Portfolio - Maya Shteinberg/projects/project 1/project1.html">לצפייה בפרוייקט >></a>
+        <a class="btn btn-info" href="/Portfolio - Maya Shteinberg/projects/project 1/assets/project1.zip" download="project.zip">להורדת הפרוייקט >></a>
     </section>
 
     <section class="icons">
@@ -51,38 +55,10 @@
         <img src="assets/img-SASS@2x.png" alt="CSS">
         <img src="assets/img-Bootstrap@2x.png" alt="CSS">
     </section>    
-    
-    <section class="image">
-        <img src="../project4.jpg" alt="דף נחיתה לגלות את העולם">
-    </section>
 
-    <section id="links" class="row">
-        <div class="col-sm-2">
-            <a href="https://goo.gl/maps/sMJJjivyJAvF1uTF8" target="_blank" ><img src="assets/Icon material-location-on.svg" alt="מפה"></a>
-            <span>דן 6, אורנית</span>
-        </div>
-        <div class="col-sm-2">
-            <a href="mailto:mayastb@gmail.com"><img src="assets/Icon simple-email.svg" alt="אימייל"></a>
-            <span>mayastb@gmail.com</span>
-        </div>
-        <div class="col-sm-2">
-            <a href="https://wa.me/+972507618108" target="_blank"><img src="assets/Icon simple-whatsapp.svg" alt="ווטסאפ"></a>
-            <span>050-7618108</span>
-        </div>
-        <div class="col-sm-2">
-            <a href="tel:+972507618108" target="_blank"><img src="assets/Icon simple-whatsapp-1.svg" alt="נייד"></a>
-            <span>050-7618108</span>
-        </div>
-        <div class="col-sm-2">
-            <a href="https://www.linkedin.com/in/maya-steinberg-95101b55/" target="_blank"><img src="assets/Icon awesome-linkedin-in.svg" alt="לינקדאין"></a>
-            <span>מאיה שטיינברג</span>
-        </div>
-        <div class="col-sm-2">
-            <a href="https://www.facebook.com/maya.steinberg.7/" target="_blank"><img src="assets/Icon awesome-facebook-f.svg" alt="פייסבוק"></a>
-            <span>#Maya_Shteinberg</span>
-        </div>
+    <section class="containImage">
+        <img src="assets/project1.jpg" class="styleImage" alt="פרוייקט 2">
     </section>
-    
     <footer>
        2023 כל הזכויות שמורות למאיה שטיינברג
     </footer>
