--- a/Portfolio - Maya Shteinberg/main page/index.html
+++ b/Portfolio - Maya Shteinberg/main page/index.html
@@ -98,7 +98,7 @@
                   <img class="card-img-top" src="../projects/project-pages/project-page 3/assets/project3.jpg" alt="Card image">
                   <div class="card-body">
                       <h4 class="card-title">קפה טוב לבוקר טוב</h4>
-                      <p class="card-text">דף נחיתה אשר נבנה באמצעות HTML ו- CSS.</p>
+                      <p class="card-text">דף נחיתה אשר נבנה באמצעות BOOTSTRAP.</p>
                       <br></p>
                       
                       <a href="../projects/project-pages/project-page 3/project_page_4.html" class="btn btn-info">לעמוד הפרוייקט >> </a>
