--- a/Portfolio - Maya Shteinberg/projects/project-pages/project-page 2/index.html
+++ b/Portfolio - Maya Shteinberg/projects/project-pages/project-page 2/index.html
@@ -43,17 +43,15 @@
     </nav>
 
     <section class="mt-4 p-5 main">
-        <h1>לגלות את העולם</h1>
-        <p>פרוייקט דף נחיתה הנבנה באמצעות שימוש ב HTML וב CSS, נבנה באמצעות שימוש ברשת (Grid). </p>
+        <h1>תן לנו להוביל אותך קדימה</h1>
+        <p>פרוייקט דף נחיתה הנבנה באמצעות שימוש ב HTML וב CSS. </p>
         <a class="btn btn-info" href="/Portfolio - Maya Shteinberg/projects/project 2/project2.html">לצפייה בפרוייקט >></a>
-        <a class="btn btn-info" href="/Portfolio - Maya Shteinberg/projects/project 2/assets/project2.zip" download="project.zip">להורדת הפרוייקט >></a>
+        <a class="btn btn-info" href="/Portfolio - Maya Shteinberg/main page/assets/project 2.zip" download="project.zip">להורדת הפרוייקט >></a>
     </section>
 
     <section class="icons">
         <img src="assets/img-HTML@2x.png" alt="HTML">
         <img src="assets/img-CSS@2x.png" alt="CSS">
-        <img src="assets/img-SASS@2x.png" alt="CSS">
-        <img src="assets/img-Bootstrap@2x.png" alt="CSS">
     </section>    
 
     <section class="containImage">
