--- a/Portfolio - Maya Shteinberg/projects/project-pages/project-page 3/index.html
+++ b/Portfolio - Maya Shteinberg/projects/project-pages/project-page 3/index.html
@@ -43,8 +43,8 @@
     </nav>
 
     <section class="mt-4 p-5 main">
-        <h1>לגלות את העולם</h1>
-        <p>פרוייקט דף נחיתה הנבנה באמצעות שימוש ב HTML וב CSS, נבנה באמצעות שימוש ברשת (Grid). </p>
+        <h1>קפה טוב לבוקר טוב</h1>
+        <p>פרוייקט דף נחיתה הנבנה באמצעות שימוש ב HTML וב BOOTSTRAP. </p>
         <a class="btn btn-info" href="/Portfolio - Maya Shteinberg/projects/project 3/project3.html">לצפייה בפרוייקט >></a>
         <a class="btn btn-info" href="/Portfolio - Maya Shteinberg/projects/project 3/assets/project3.zip" download="project.zip">להורדת הפרוייקט >></a>
     </section>
@@ -52,7 +52,6 @@
     <section class="icons">
         <img src="assets/img-HTML@2x.png" alt="HTML">
         <img src="assets/img-CSS@2x.png" alt="CSS">
-        <img src="assets/img-SASS@2x.png" alt="CSS">
         <img src="assets/img-Bootstrap@2x.png" alt="CSS">
     </section>    
 
