--- a/Portfolio - Maya Shteinberg/projects/project 1/project1.html
+++ b/Portfolio - Maya Shteinberg/projects/project 1/project1.html
@@ -10,22 +10,24 @@
     </head>
 
     <body>
-        <h1>Here & Now</h1>
-        <h2>רצינו להזמין אתכם להנות משלל מתנות</h2>
-        <p>לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית לפרומי בלוף קינץ תתיח לרעח. לת צשחמי צש בליא, מנסוטו צמלח לביקו ננבי, צמוקו בלוקריה.</p>
-        <form class="container">
-            <div class="myDiv">
-                <label>שם</label>
-                <input type="text" name="שם">
-            </div>
-            <div>
-                <label>דוא"ל</label>
-                <input type="email" name="דואר אלקטרוני">
-            </div>
-            <div>
-               <button>עדכנו אותי</button>
-           </div>
-        </form>
+        <div class="frame">
+            <h1>Here & Now</h1>
+            <h2>רצינו להזמין אתכם להנות משלל מתנות</h2>
+            <p>לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית לפרומי בלוף קינץ תתיח לרעח. לת צשחמי צש בליא, מנסוטו צמלח לביקו ננבי, צמוקו בלוקריה.</p>
+            <form class="container">
+                <div class="myDiv">
+                    <label>שם</label>
+                    <input type="text" name="שם">
+                </div>
+                <div>
+                    <label>דוא"ל</label>
+                    <input type="email" name="דואר אלקטרוני">
+                </div>
+                <div>
+                   <button>עדכנו אותי</button>
+               </div>
+            </form>
+        </div>
     </body>
 
 </html>
