--- a/Portfolio  Maya Shteinberg/projects/project-pages/project-page 5/project_page_5.html
+++ b/Portfolio  Maya Shteinberg/projects/project-pages/project-page 5/project_page_5.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.rtl.min.css">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Project Page 4</title>
+    <title>Project Page 5</title>
 </head>
 
 <body>
@@ -20,22 +20,22 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/Portfolio - Maya Shteinberg/main page/index.html">ראשי</a>
+                    <a class="nav-link" href="/Portfolio  Maya Shteinberg/main page/index.html">ראשי</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Portfolio - Maya Shteinberg/main page/index.html#about">אודות</a>
+                    <a class="nav-link" href="/Portfolio  Maya Shteinberg/main page/index.html#about">אודות</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Portfolio - Maya Shteinberg/main page/index.html#gallery">גלריה</a>
+                    <a class="nav-link" href="/Portfolio  Maya Shteinberg/main page/index.html#gallery">גלריה</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Portfolio - Maya Shteinberg/main page/index.html#contact">צור קשר</a>
+                    <a class="nav-link" href="/Portfolio  Maya Shteinberg/main page/index.html#contact">צור קשר</a>
                 </li>
             </ul>
         </div>
 
         <div class="container-fluid" style="flex-flow: row-reverse;">
-            <a class="navbar-brand logo" href="/Portfolio - Maya Shteinberg/main page/index.html">
+            <a class="navbar-brand logo" href="/Portfolio  Maya Shteinberg/main page/index.html">
                 <span>Maya Shteinberg</span>
                 <img src="assets/myAvatar.png" class="myIcon">
             </a>
@@ -43,10 +43,10 @@
     </nav>
 
     <section class="mt-4 p-5 main">
-        <h1>לגלות את העולם</h1>
-        <p>פרוייקט דף נחיתה הנבנה באמצעות שימוש ב HTML וב CSS, נבנה באמצעות שימוש ברשת (Grid). </p>
-        <a class="btn btn-info" href="/Portfolio - Maya Shteinberg/projects/project 4/index.html">לצפייה בפרוייקט >></a>
-        <a class="btn btn-info" href="/Portfolio - Maya Shteinberg/main page/assets/project 4.zip" download="project.zip">להורדת הפרוייקט >></a>
+        <h1>תן לנו להוביל אותך קדימה</h1>
+        <p>פרוייקט דף נחיתה הנבנה באמצעות שימוש ב HTML וב CSS, נבנה באמצעות שימוש ברשת. </p>
+        <a class="btn btn-info" href="/Portfolio  Maya Shteinberg/projects/project 5/index.html">לצפייה בפרוייקט >></a>
+        <a class="btn btn-info" href="/Portfolio  Maya Shteinberg/main page/assets/project 5.zip" download="project.zip">להורדת הפרוייקט >></a>
     </section>
 
     <section class="icons">
@@ -56,7 +56,7 @@
     </section>    
 
     <section class="containImage">
-        <img src="assets/project4.jpg" class="styleImage" alt="פרוייקט 4">
+        <img src="assets/project5.jpg" class="styleImage" alt="פרוייקט 5">
     </section>
     <footer>
        2023 כל הזכויות שמורות למאיה שטיינברג
