--- a/Portfolio  Maya Shteinberg/projects/project-pages/project-page 1/project_page_1.html
+++ b/Portfolio  Maya Shteinberg/projects/project-pages/project-page 1/project_page_1.html
@@ -20,22 +20,22 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/Portfolio - Maya Shteinberg/main page/index.html">ראשי</a>
+                    <a class="nav-link" href="/Portfolio  Maya Shteinberg/main page/index.html">ראשי</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Portfolio - Maya Shteinberg/main page/index.html#about">אודות</a>
+                    <a class="nav-link" href="/Portfolio  Maya Shteinberg/main page/index.html#about">אודות</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Portfolio - Maya Shteinberg/main page/index.html#gallery">גלריה</a>
+                    <a class="nav-link" href="/Portfolio  Maya Shteinberg/main page/index.html#gallery">גלריה</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Portfolio - Maya Shteinberg/main page/index.html#contact">צור קשר</a>
+                    <a class="nav-link" href="/Portfolio  Maya Shteinberg/main page/index.html#contact">צור קשר</a>
                 </li>
             </ul>
         </div>
 
         <div class="container-fluid" style="flex-flow: row-reverse;">
-            <a class="navbar-brand logo" href="/Portfolio - Maya Shteinberg/main page/index.html">
+            <a class="navbar-brand logo" href="/Portfolio  Maya Shteinberg/projects/project 1/project1.html">
                 <span>Maya Shteinberg</span>
                 <img src="assets/myAvatar.png" class="myIcon">
             </a>
@@ -45,8 +45,8 @@
     <section class="mt-4 p-5 main">
         <h1>לגלות את העולם</h1>
         <p>פרוייקט דף נחיתה הנבנה באמצעות שימוש ב HTML וב SCSS. </p>
-        <a class="btn btn-info" href="/Portfolio - Maya Shteinberg/projects/project 1/project1.html">לצפייה בפרוייקט >></a>
-        <a class="btn btn-info" href="/Portfolio - Maya Shteinberg/main page/assets/project 1.zip" download="project.zip">להורדת הפרוייקט >></a>
+        <a class="btn btn-info" href="/Portfolio  Maya Shteinberg/projects/project 1/project1.html">לצפייה בפרוייקט >></a>
+        <a class="btn btn-info" href="/Portfolio  Maya Shteinberg/main page/assets/project 1.zip" download="project.zip">להורדת הפרוייקט >></a>
     </section>
 
     <section class="icons">
