--- a/Portfolio  Maya Shteinberg/main page/index.html
+++ b/Portfolio  Maya Shteinberg/main page/index.html
@@ -155,7 +155,7 @@
                     <img class="card-img-top" src="../projects/project-pages/project-page 7/assets/project 7.jpg" alt="Card image">
                     <div class="card-body">
                         <h4 class="card-title">סנייק</h4>
-                        <p class="card-text">סנייק: משחק קלאסי בסגנון מודרני, ממומש באמצעות HTML, CSS ו-JavaScript. שלטו בנחש הרעב בעזרת חצים, אספו תפוחים והימנעו מהתנגשויות כדי להשיג את הניקוד הגבוה ביותר!</p>>
+                        <p class="card-text">סנייק: משחק קלאסי בסגנון מודרני, ממומש באמצעות HTML, CSS ו-JavaScript. שלטו בנחש הרעב בעזרת חצים, אספו תפוחים והימנעו מהתנגשויות כדי להשיג את הניקוד הגבוה ביותר!</p>
                         <a href="../projects/project-pages/project-page 7/index.html" class="btn btn-info">לעמוד הפרוייקט >> </a>
                     </div>
                 </div>
